[package]
name = "bisharper-bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisharper-common = { path = "../../core/bisharper-common"}
bisharper-filesystem = { path = "../../core/bisharper-filesystem"}
thiserror = "1.0.57"
byteorder = "1.5.0"